--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -71,6 +71,6 @@
 <mat-card *ngIf="!cart.items.length" class="mx-auto my-3 max-w-7xl">
     <p>
         Your cart is empty.
-        <button mat-raised-button routerLink="/home">Start Shopping</button>
+        <button mat-raised-button routerLink="/header/home">Start Shopping</button>
     </p>
 </mat-card>
