--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,21 +26,21 @@
                 <!-- Mobile Menu open: "block", Menu closed: "hidden" -->
                 <div class="md:flex items-center ">
                     <div class="flex flex-col md:flex-row md:mx-6">
-                        <a class="my-1  text-gray-700 font-medium text-xl hover:text-indigo-500 md:mx-4 md:my-0" href="/home">Home</a
+                        <a class="my-1  text-gray-700 font-medium text-xl hover:text-indigo-500 md:mx-4 md:my-0" href="header/home">Home</a
             >
             <a
               class="my-1 text-xl text-gray-700 font-medium hover:text-indigo-500 md:mx-4 md:my-0"
-              href="/home"
+              href="header/home"
               >Shop</a
             >
             <a
               class="my-1 text-xl text-gray-700 font-medium hover:text-indigo-500 md:mx-4 md:my-0"
-              href="/home"
+              href="header/home"
               >Contact</a
             >
             <a
               class="my-1 text-xl text-gray-700 font-medium hover:text-indigo-500 md:mx-4 md:my-0"
-              href="/home"
+              href="header/home"
               >About</a
             >
           </div>
